[package]
name = "ens-domains"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.10.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
